# graph-RAG-MVP

./: .gitignore  README.md
hybrid-Graph-RAG/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
hybrid-Graph-RAG/app/: __init__.py  main.py  settings.py
hybrid-Graph-RAG/app/api/: health.py  insights.py  messages.py  runtime.py  search.py  ui.py
hybrid-Graph-RAG/app/models/: api.py  errors.py  records.py
hybrid-Graph-RAG/app/repositories/: __init__.py  ingest_repo.py  insights_repo.py  neo4j_client.py  schema.py  search_repo.py
hybrid-Graph-RAG/app/services/: embedder.py  ingestion.py  insights_service.py  normalizer.py  parser.py  ranking.py  search_service.py
hybrid-Graph-RAG/app/static/: styles.css
hybrid-Graph-RAG/app/templates/: base.html  insights.html  message_detail.html  search.html
hybrid-Graph-RAG/docs/: init_guide.md  prd.md  trd.md
hybrid-Graph-RAG/scripts/: bootstrap_schema.py  ingest_chat_logs.py
hybrid-Graph-RAG/tests/: conftest.py
hybrid-Graph-RAG/tests/fixtures/: malformed_chat_logs.txt
hybrid-Graph-RAG/tests/integration/: test_ingestion_sample.py  test_insights_api.py  test_search_api.py
hybrid-Graph-RAG/tests/smoke/: test_ui_smoke.py
simple-Graph-RAG/: .env.example  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
simple-Graph-RAG/app/: __init__.py  config.py  container.py  main.py  schemas.py
simple-Graph-RAG/data/: golden_qa.json  model_issue_dataset_10000.xlsx  sample_chat.txt
simple-Graph-RAG/docs/: PRD.md  TRD.md
simple-Graph-RAG/scripts/: analyze_embedding.py  assess_search_quality.py  backfill_graph.py  bootstrap_neo4j.cypher  bootstrap_postgres.sql  claude_proxy.py  codex_proxy.py  detect_communities.py  evaluate_golden_qa.py  generate_unique_dataset.py  impact_analysis.py  ingest_file.py  query_documents.py  run_chunking_local.py  validate_fixes.py
simple-Graph-RAG/tests/: golden_queries.yaml  retrieval_test_support.py  test_api.py  test_api_errors.py  test_chunking.py  test_codex_proxy.py  test_count_strategy.py  test_embedding_provider.py  test_golden_queries.py  test_graph_builder.py  test_graph_retrieval.py  test_ingest_rollback.py  test_ingest_service.py  test_issue_workbook.py  test_mixed_strategy.py  test_postgres_vector_store.py  test_query_analyzer.py  test_query_router.py  test_ranking_policy.py  test_retrieval.py  test_retrieval_pipeline.py  test_source_selector.py
(+33 files in other folders)
