[project]
name = "hybrid-graph-rag"
version = "0.1.0"
description = "Hybrid GraphRAG MVP for Korean chat log search and insights."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "beautifulsoup4>=4.12.3,<5",
  "fastapi>=0.115.0,<1",
  "httpx>=0.28.0,<1",
  "jinja2>=3.1.4,<4",
  "neo4j>=5.28.0,<6",
  "numpy>=2.2.0,<3",
  "pydantic>=2.10.0,<3",
  "pydantic-settings>=2.7.0,<3",
  "python-multipart>=0.0.20,<1",
  "torch>=2.7.0,<3",
  "transformers>=4.44.2,<5",
  "uvicorn[standard]>=0.34.0,<1",
]

[dependency-groups]
dev = [
  "pytest>=8.3.0,<9",
  "pytest-asyncio>=0.25.0,<1",
  "pytest-cov>=6.0.0,<7",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra"
testpaths = ["tests"]
markers = [
  "integration: tests that require Neo4j and the embedding model",
  "smoke: UI smoke tests",
]

[tool.ruff]
line-length = 100

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
