[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "simple-graph-rag"
version = "0.1.0"
description = "Neo4j GraphRAG + PostgreSQL/pgvector scaffold for Korean chat logs"
readme = "docs/PRD.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
  "pydantic>=2.8.0,<3.0.0",
  "pydantic-settings>=2.4.0,<3.0.0",
  "python-multipart>=0.0.9,<1.0.0",
  "python-dotenv>=1.0.1,<2.0.0",
  "httpx>=0.27.0,<1.0.0",
  "neo4j>=5.23.0,<6.0.0",
  "psycopg[binary]>=3.2.0,<4.0.0",
  "psycopg-pool>=3.2.0,<4.0.0",
  "pgvector>=0.3.3,<1.0.0",
  "sentence-transformers>=3.0.0,<4.0.0",
  "torch>=2.4.0,<3.0.0",
  "kss>=6.0.4,<7.0.0",
  "openpyxl>=3.1.5,<4.0.0",
  "kiwipiepy>=0.20.4,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0,<9.0.0",
  "pytest-asyncio>=0.24.0,<1.0.0",
  "pytest-cov>=5.0.0,<6.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
